--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^4.3.0",
     "@reduxjs/toolkit": "^2.8.2",
     "@types/nodemailer": "^6.4.17",
     "@types/pdfkit": "^0.14.0",
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
     "framer-motion": "^12.17.0",
+    "js-cookie": "^3.0.5",
     "mongoose": "^8.15.1",
     "next": "15.3.2",
     "next-auth": "^5.0.0-beta.28",
