--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/nodemailer": "^6.4.17",
     "@types/pdfkit": "^0.14.0",
     "axios": "^1.9.0",
+    "cloudinary": "^2.7.0",
     "dotenv": "^16.5.0",
     "framer-motion": "^12.17.0",
     "js-cookie": "^3.0.5",
